Titulo da Pagina

--- a/usandogit/index.html
+++ b/usandogit/index.html
@@ -1,7 +1,8 @@
-	Aliases
+<html>
+	<head>
+	</head>
+	<body>
+	<h1>Projeto do Joao Fonseca</h1>
+	</body>
 
-"vim ~/.gitconfig"
-[alias]
-	st = status
-	co = checkout 
-	envia = !git chekout master && git pull && git checkout desenvolvimento && git rebase master && git checkout master && git merge desenvolvimento && git push
+</html>
