alterando novamente o espaço no main, agora na pasta correta

--- a/usandogit/propostas_homepage/proposta_1.html
+++ b/usandogit/propostas_homepage/proposta_1.html
@@ -1,4 +1,4 @@
- <html>
+﻿ <html>
     <head>
       <title>Proposta um para site da empresa</title>
     </head>
@@ -7,7 +7,7 @@
 
 	  <main>
 		Aqui está o conteúdo da página
-      </main>
+      	 </main>
   
       <h1>Rodapé do sistema</h1>
     </body>
