--- a/usandogit/GitComandos.html
+++ b/usandogit/GitComandos.html
@@ -4,10 +4,12 @@
 </head>
 
 <body>
-Estados:
+<h2>Estados:</h2>
+<br>
 Modificado (modified);
 Preparado (staged/index)
 Consolidado (comitted);
+
 Ajuda
 Geral
 git help
