ajustes no layout

--- a/usandogit/GitComandos.html
+++ b/usandogit/GitComandos.html
@@ -1,29 +1,35 @@
 <html>
-<head>
-<title>GIT</title>
-</head>
+
+<h1>GIT</h1>
+
 
 <body>
 <h2>Estados:</h2>
-<br>
-Modificado (modified);
-Preparado (staged/index)
-Consolidado (comitted);
+<br/><br/>
+<b>Modificado:</b> (modified);
+<br/><br/>
+<b>Preparado:</b> (staged/index)
+<br/><br/>
+<b>Consolidado:</b> (comitted);
+<br/><br/>
+<b>Ajuda Geral:</b> git help
+<br/>
+<b>Comando específico:</b> 
 
-Ajuda
-Geral
-git help
-Comando específico
-git help add
+git help add /
 git help commit
-git help <qualquer_comando_git>
-Configuração
-Geral
+<br/><br/>
+<b>Configuração Geral:</b>
+<br/>
 As configurações do GIT são armazenadas no arquivo .gitconfig localizado dentro do diretório do usuário do Sistema Operacional (Ex.: Windows: C:\Users\Documents and Settings\Leonardo ou *nix /home/leonardo).
+<br/>
 As configurações realizadas através dos comandos abaixo serão incluídas no arquivo citado acima.
-Setar usuário
+<br/>
+<b>Setar usuário:</b>
+<br/>
 git config --global user.name "Leonardo Comelli"
-Setar email
+<br/>
+<b>Setar email:</b>
 git config --global user.email leonardo@software-ltda.com.br
 Setar editor
 git config --global core.editor vim
