--- a/usandogit/GitComandos.html
+++ b/usandogit/GitComandos.html
@@ -31,7 +31,8 @@ git config --global user.name "Leonardo Comelli"
 <br/>
 <b>Setar email:</b>
 git config --global user.email leonardo@software-ltda.com.br
-Setar editor
+<br/>
+<b>Setar editor</b>
 git config --global core.editor vim
 Setar ferramenta de merge
 git config --global merge.tool vimdiff
