mudando msg da pagina

--- a/usandogit/propostas_homepage/proposta_1.html
+++ b/usandogit/propostas_homepage/proposta_1.html
@@ -6,7 +6,7 @@
       <h1>Cabeçalho do sistema</h1>
 
 	  <main>
-		Aqui está o conteúdo da página
+		isso é o conteúdo da página
       	  </main>
   
       <h1>Rodapé do sistema</h1>
