--- a/usandogit/propostas_homepage/proposta_1.html
+++ b/usandogit/propostas_homepage/proposta_1.html
@@ -1,14 +1,17 @@
 ﻿ <html>
     <head>
-      <title>Proposta I para site da empresa</title>
+      <title>Proposta 1 para homepage da empresa</title>
     </head>
     <body>
-      <h1>Cabeçalho do sistema</h1>
+	<h1>
+		Título do site
+	</h1>
 
-	  <main>
-		isso é o conteúdo da página
-      	  </main>
-
-     <h1>Rodapé do sistema</h1>
+	  <div>
+		decidir conteudo
+      	  </div>
+	<h1>
+		decidir rodape
+	</h1>
     </body>
   </html>
