--- a/usandogit/propostas_homepage/proposta_1.html
+++ b/usandogit/propostas_homepage/proposta_1.html
@@ -6,7 +6,7 @@
       <h1>Cabeçalho do sistema</h1>
 
 	  <main>
-		isso é o conteúdo da página
+		Conteudo site
       	  </main>
 
      <h1>Rodapé do sistema</h1>
