--- a/usandogit/propostas_homepage/proposta_1.html
+++ b/usandogit/propostas_homepage/proposta_1.html
@@ -1,9 +1,11 @@
 ﻿ <html>
     <head>
-      <title>Proposta I para site da empresa</title>
+      <title>Proposta um para site da empresa</title>
     </head>
     <body>
-      <h1>Cabeçalho do sistema</h1>
+	<h1>
+	Cabeçalho do sistema
+	</h1>
 
 	  <main>
 		Conteudo site
