alterando marca registrada

--- a/usandogit/propostas_homepage/proposta_1.html
+++ b/usandogit/propostas_homepage/proposta_1.html
@@ -1,25 +1,14 @@
-﻿<html>
+﻿ <html>
+    <head>
+      <title>Proposta um para site da empresa</title>
+    </head>
+    <body>
+      <h1>Cabeçalho do sistema</h1>
+
+	  <main>
+		Aqui está o conteúdo da página
+      	  </main>
   
-	</head>
-		<title>Proposta 1 para homepage da empresa</title>
-	</head>
-
-	<body>
-
-	<h1>
-		Título do site
-	</h1>
-
-	<div>
-		decidir conteudo
-	</div>
-
-	<h1>
-
-		Rodap3 do Site
-	>>Dolar a R$4,00 vish
-
-	</h1>
-
-	</body>
-</html>
+      <h1>Rodapé do sistema</h1> {-R-}
+    </body>
+  </html>
