Arrumando o baile todo

--- a/usandogit/propostas_homepage/proposta_1.html
+++ b/usandogit/propostas_homepage/proposta_1.html
@@ -9,6 +9,6 @@
 		Aqui está o conteúdo da página
       	  </main>
   
-      <h1>Rodapé do sistema</h1>(R)
+      <h1>Rodapé do sistema</h1>
     </body>
   </html>
