--- a/usandogit/propostas_homepage/proposta_1.html
+++ b/usandogit/propostas_homepage/proposta_1.html
@@ -1,7 +1,7 @@
 ﻿ <html>
  
 	</head>
-		<title>Proposta 1 para homepage da empresa</title>
+		<title>Proposta X para homepage da empresa</title>
 	</head>
 
 	<body>
