Nome da Empresa

--- a/usandogit/propostas_homepage/proposta_1.html
+++ b/usandogit/propostas_homepage/proposta_1.html
@@ -7,11 +7,11 @@
 	<body>
 
 	<h1>
-		Título do site
+		Título do sistema para a Caelum
 	</h1>
 
 	<div>
-		decidir conteudo
+		decidir conteudo **
 	</div>
 
 	<h1>
